# gtkpass

./: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  DEVELOPMENT.md  FAQ.md  QUICKSTART.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SETUP_SUMMARY.md  compile_blueprints.sh  pyproject.toml  run_tests.sh
docs/: BLUEPRINT.md
examples/: background_service_demo.py
src/gtkpass/: __init__.py  __main__.py  app.py  window.py
src/gtkpass/models/: __init__.py  password.py
src/gtkpass/services/: __init__.py  background.py
src/gtkpass/ui/: __init__.py  password_detail.py  password_list.py
src/gtkpass/ui/blueprints/: README.md  window.blp  window.ui
tests/: conftest.py
tests/acceptance/: test_user_stories.py
tests/integration/: test_app_startup.py
tests/unit/: test_app.py  test_background_service.py  test_models.py
